Fix for settings clipping

--- a/static/koboldai.css
+++ b/static/koboldai.css
@@ -168,7 +168,7 @@
 	grid-template-areas: "label value"
 						 "item item"
 						 "minlabel maxlabel";
-	grid-template-rows: 20px 25px 15px;
+	grid-template-rows: 20px 25px 20px;
 	grid-template-columns: 160px 40px;
 	row-gap: 0.2em;
 	background-color: var(--setting_background);
